--- a/.gitignore
+++ b/.gitignore
@@ -65,5 +65,6 @@ crashlytics-build.properties
 
 /Assets/FMODStudioCache.asset
 /Assets/FMODStudioCache.asset.meta
+Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
 fmod.log
 fmod_editor.log
